# backend/src/modules/cart/dto/add-cart-item.dto.ts
@@ -1,0 +1,14 @@
+import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
+import { IsInt, IsOptional, IsUUID, Min } from 'class-validator';
+
+export class AddCartItemDto {
+  @ApiProperty()
+  @IsUUID()
+  product_id: string;
+
+  @ApiPropertyOptional({ default: 1 })
+  @IsOptional()
+  @IsInt()
+  @Min(1)
+  quantity?: number;
+}
