# backend/src/modules/orders/dto/create-order.dto.ts
@@ -1,0 +1,41 @@
+import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
+import { Type } from 'class-transformer';
+import {
+  ArrayMinSize,
+  IsArray,
+  IsInt,
+  IsOptional,
+  IsString,
+  IsUUID,
+  Min,
+  ValidateNested,
+} from 'class-validator';
+
+export class OrderItemInputDto {
+  @ApiProperty()
+  @IsUUID()
+  product_id: string;
+
+  @ApiProperty()
+  @IsInt()
+  @Min(1)
+  quantity: number;
+}
+
+export class CreateOrderDto {
+  @ApiProperty()
+  @IsUUID()
+  address_id: string;
+
+  @ApiProperty({ type: [OrderItemInputDto] })
+  @IsArray()
+  @ArrayMinSize(1)
+  @ValidateNested({ each: true })
+  @Type(() => OrderItemInputDto)
+  items: OrderItemInputDto[];
+
+  @ApiPropertyOptional()
+  @IsOptional()
+  @IsString()
+  coupon_code?: string;
+}
