# backend/src/modules/orders/dto/update-order-status.dto.ts
@@ -1,0 +1,14 @@
+import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
+import { order_status } from '@prisma/client';
+import { IsEnum, IsOptional, IsString } from 'class-validator';
+
+export class UpdateOrderStatusDto {
+  @ApiProperty({ enum: order_status })
+  @IsEnum(order_status)
+  status: order_status;
+
+  @ApiPropertyOptional()
+  @IsOptional()
+  @IsString()
+  note?: string;
+}
