# backend/src/modules/wishlist/dto/add-wishlist-item.dto.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsUUID } from 'class-validator';
+
+export class AddWishlistItemDto {
+  @ApiProperty()
+  @IsUUID()
+  product_id: string;
+}
